fix: [Bug]: NFTs in Send flow overlapping (agent-run-72f19e55)

--- a/ui/pages/confirmations/components/UI/asset/index.scss
+++ b/ui/pages/confirmations/components/UI/asset/index.scss
@@ -6,3 +6,9 @@
     cursor: pointer;
   }
 }
+
+.send-nft-default-image {
+  width: 32px;
+  height: 32px;
+  padding-top: 0 !important;
+}
